@@ -9,6 +9,7 @@ if (UNIX)
 endif (UNIX)
 
 if (WIN32)
+ SET(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS 1)
  set(CMAKE_PREFIX_PATH "C:/Program Files/Coreform Cubit 2024.3/cmake")
  set(Qt5_DIR "C:/Qt/5.15.2/msvc2019_64/lib/cmake/Qt5") 
  set(Qt5Core_DIR "C:/Qt/5.15.2/msvc2019_64/lib/cmake/Qt5Core") 
@@ -106,24 +107,34 @@ set(CCXCOMP_SRCS
     )
 
 if (WIN32)
-add_library(calculix_plugin SHARED ${CCXPLUGIN_SRCS})
+add_library(calculix_useroptions SHARED ${CCXUSEROPTIONS_SRCS})
+#set_target_properties(calculix_useroptions PROPERTIES SUFFIX ".dll")
+target_link_libraries(calculix_useroptions clarogui clarofw Qt5::Widgets)
+set_target_properties(calculix_useroptions PROPERTIES AUTOMOC 1)
+
+add_library(calculix_plugin MODULE ${CCXPLUGIN_SRCS})
 set_target_properties(calculix_plugin PROPERTIES SUFFIX ".ccm")
-target_link_libraries(calculix_plugin cubiti cubit_util)
-#target_link_libraries(calculix_plugin clarofw Qt5::Widgets)
-#set_target_properties(calculix_plugin PROPERTIES AUTOMOC 1)
-#set_target_properties(calculix_plugin PROPERTIES CMAKE_POSITION_INDEPENDENT_CODE ${BUILD_SHARED_LIBS})
+
+add_library(calculix_core SHARED ${CCXCORE_SRCS})
+#set_target_properties(calculix_core PROPERTIES SUFFIX ".dll")
+target_link_libraries(calculix_core cubiti cubit_util)
+target_link_libraries(calculix_core clarofw Qt5::Widgets)
+set_target_properties(calculix_core PROPERTIES AUTOMOC 1)
 
 add_library(calculix_comp SHARED ${CCXCOMP_SRCS})
 set_target_properties(calculix_comp PROPERTIES SUFFIX ".ccl")
-target_link_libraries(calculix_comp clarogui navigation pickwidget cubiti clarofw)
+target_link_libraries(calculix_comp clarogui navigation pickwidget cubiti clarofw Qt5::Widgets)
 set_target_properties(calculix_comp PROPERTIES AUTOMOC 1)
 
 add_library(calculix_pythoninterface SHARED ${CCXPYTHONINTERFACE_SRCS})
-set_target_properties(calculix_pythoninterface PROPERTIES SUFFIX ".dll" PREFIX "_")
-target_link_libraries(calculix_pythoninterface calculix_plugin cubiti cubit_util)
-#target_link_libraries(calculix_plugin calculix_comp)
-target_link_libraries(calculix_comp calculix_plugin)
-target_link_libraries(calculix_comp Qt5::Widgets)
+#set_target_properties(calculix_pythoninterface PROPERTIES SUFFIX ".dll" PREFIX "_")
+set_target_properties(calculix_pythoninterface PROPERTIES PREFIX "_")
+target_link_libraries(calculix_pythoninterface cubiti cubit_util)
+
+target_link_libraries(calculix_core calculix_useroptions)
+target_link_libraries(calculix_plugin calculix_core)
+target_link_libraries(calculix_pythoninterface calculix_core)
+target_link_libraries(calculix_comp calculix_core)
 endif (WIN32)
 
 if (UNIX)
