@@ -22,3 +22,7 @@
 2024-06-03 compilation of windows version
 2024-06-06 added reading of buckling values
 2024-06-06 added query of buckling values
+2024-06-11 debugging startup of ccl and ccm, changing dependencies in cmake
+2024-06-12 debugging startup of ccl and ccm, changing dependencies in cmake
+2024-06-13 debugging startup of ccl and ccm, changing dependencies in cmake
+2024-06-14 debugging startup of ccl and ccm, changing dependencies in cmake
